--- a/Snapchat/Base.lproj/Main.storyboard
+++ b/Snapchat/Base.lproj/Main.storyboard
@@ -1,26 +1,117 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16D30" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_0" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Iniciar Sesion View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="iniciarSesionViewController" customModule="Snapchat" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Snapchat" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cXe-qx-isQ">
+                                <rect key="frame" x="59.5" y="45" width="201" height="58"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="48"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="taF-Xy-BRE">
+                                <rect key="frame" x="114.5" y="261" width="91" height="30"/>
+                                <state key="normal" title="Iniciar Sesión"/>
+                                <connections>
+                                    <action selector="iniciarSesionTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ibe-8A-WgO"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ser-iU-zSP">
+                                <rect key="frame" x="60" y="128" width="200" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="kvk-bi-D1G"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6Ga-cR-sZY">
+                                <rect key="frame" x="60" y="168" width="200" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="gOD-cS-ToD"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Ga-cR-sZY" firstAttribute="top" secondItem="Ser-iU-zSP" secondAttribute="bottom" constant="10" id="46Q-9s-eO8"/>
+                            <constraint firstItem="taF-Xy-BRE" firstAttribute="top" secondItem="6Ga-cR-sZY" secondAttribute="bottom" constant="63" id="7fx-VB-Cme"/>
+                            <constraint firstItem="cXe-qx-isQ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Kfi-13-JTE"/>
+                            <constraint firstItem="taF-Xy-BRE" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="LhZ-jZ-pPP"/>
+                            <constraint firstItem="6Ga-cR-sZY" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="WT2-5g-DZt"/>
+                            <constraint firstItem="cXe-qx-isQ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="25" id="c4I-zK-lb2"/>
+                            <constraint firstItem="6Ga-cR-sZY" firstAttribute="top" secondItem="Ser-iU-zSP" secondAttribute="bottom" constant="10" id="jjx-FO-7V1"/>
+                            <constraint firstItem="Ser-iU-zSP" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="pt1-lH-nKL"/>
+                            <constraint firstItem="Ser-iU-zSP" firstAttribute="top" secondItem="cXe-qx-isQ" secondAttribute="bottom" constant="25" id="wx1-FJ-MQy"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="emailTextField" destination="Ser-iU-zSP" id="day-3W-4yk"/>
+                        <outlet property="passwordTextField" destination="6Ga-cR-sZY" id="HJX-NM-Vbj"/>
+                        <segue destination="mJp-uH-6ty" kind="presentation" identifier="iniciarsesionsegue" id="Ncm-tO-nUo"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-99" y="52"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="k2B-q9-tnj">
+            <objects>
+                <viewController id="vOe-p3-kkR" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="YsS-Tq-t7x"/>
+                        <viewControllerLayoutGuide type="bottom" id="OTg-R7-gpX"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="HaJ-Qd-iV9">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="akw-Q7-nRx"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Gca-XT-4nJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1762.5" y="23.239436619718312"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="JEI-3U-GVg">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="mJp-uH-6ty" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Vc0-id-bAh">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="vOe-p3-kkR" kind="relationship" relationship="rootViewController" id="9SO-2b-dpj"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KsV-iV-gBt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="765" y="23.239436619718312"/>
         </scene>
     </scenes>
 </document>
